modules/ingress/examples/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
      alb.ingress.kubernetes.io/group.name: test-ingress,
      kubernetes.io/ingress.class: alb,
spec:
  rules:
    - http:
        paths:
          - path: /welcome
            backend:
              serviceName: myapp1
              servicePort: 80
          - path: /bye
            backend:
              serviceName: myapp2
              servicePort: 8088
